--- a/404.html
+++ b/404.html
@@ -15,9 +15,10 @@
 	<body>
 		<div class="wrapper">
 			<header>
-				<h1><a href="/"><img src="/img/pixelcog-logo.png" alt="" width="300" /></a></h1>
+				<h1><a href="/"><img src="https://avatars0.githubusercontent.com/u/11220097?v=3&s=460" alt="" width="300" /></a></h1>
 				<nav><ul>
 					<li><a href="/about/">About</a></li>
+					<li><a {% if location == 'publications' %}class="active" {% endif %}href="/publications/">Publications</a></li>
 					<li><a href="/projects/">Projects</a></li>
 					<li><a href="/blog/">Blog</a></li>
 					<li><a href="/contact/">Contact</a></li>
