--- a/404.html
+++ b/404.html
@@ -213,7 +213,19 @@
   </ul>
   
   <ul>
+    <li><a href="/publication/2012-JARE-VolSpillover/">Volatility spillovers in U.S. crude oil, ethanol, and corn futures markets</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/2012-EE-MEStorage/">How market efficiency and the theory of storage link corn and ethanol markets</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/2012-pnas/">Optimal portfolio design to reduce climate-related conservation uncertainty in the Prairie Pothole Region</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/2012-LE-CropBasedBio/">Crop-Based Biofuel Production with Acreage Competition and Uncertainty</a></li>
   </ul>
   
 
