fixed ill lib links

--- a/publication/2014-REE/index.html
+++ b/publication/2014-REE/index.html
@@ -288,7 +288,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="http://www.sciencedirect.com.proxy2.library.illinois.edu/science/article/pii/S0928765514000402">
+<a class="btn btn-primary btn-outline" href="http://www.sciencedirect.com/science/article/pii/S09287655140004022">
   PDF
 </a>
 
