--- a/publication/index.html
+++ b/publication/index.html
@@ -295,7 +295,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="http://www.sciencedirect.com.proxy2.library.illinois.edu/science/article/pii/S0928765514000773">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.sciencedirect.com/science/article/pii/S0928765514000773">
   PDF
 </a>
 
@@ -326,7 +326,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="http://www.sciencedirect.com.proxy2.library.illinois.edu/science/article/pii/S0261560614000771">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.sciencedirect.com/science/article/pii/S0261560614000771">
   PDF
 </a>
 
@@ -388,7 +388,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="http://www.sciencedirect.com.proxy2.library.illinois.edu/science/article/pii/S0928765514000402">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.sciencedirect.com/science/article/pii/S09287655140004022">
   PDF
 </a>
 
