--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="http://www.sciencedirect.com.proxy2.library.illinois.edu/science/article/pii/S0928765514000773">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.sciencedirect.com/science/article/pii/S0928765514000773">
   PDF
 </a>
 
@@ -651,7 +651,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="http://www.sciencedirect.com.proxy2.library.illinois.edu/science/article/pii/S0261560614000771">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.sciencedirect.com/science/article/pii/S0261560614000771">
   PDF
 </a>
 
@@ -781,7 +781,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="http://www.sciencedirect.com.proxy2.library.illinois.edu/science/article/pii/S0928765514000402">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.sciencedirect.com/science/article/pii/S09287655140004022">
   PDF
 </a>
 
