--- a/publication/2014-JIMF/index.html
+++ b/publication/2014-JIMF/index.html
@@ -288,7 +288,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="http://www.sciencedirect.com.proxy2.library.illinois.edu/science/article/pii/S0261560614000771">
+<a class="btn btn-primary btn-outline" href="http://www.sciencedirect.com/science/article/pii/S0261560614000771">
   PDF
 </a>
 
