--- a/publication/index.html
+++ b/publication/index.html
@@ -21,7 +21,7 @@
   
   
 
-  <meta name="author" content="Mindy Mallory">
+  <meta name="author" content="Mindy L. Mallory">
 
   
   
@@ -486,7 +486,7 @@
 
 
 
-  <span><a href="/authors/admin/">Mindy Mallory</a></span>
+  <span><a href="/authors/admin/">Mindy L. Mallory</a></span>
 
   </span>
   (2019).
@@ -684,7 +684,7 @@
 
 
 
-  <span><a href="/authors/admin/">Mindy Mallory</a></span>, <span><a href="/authors/robert-ford/">Robert Ford</a></span>
+  <span><a href="/authors/admin/">Mindy L. Mallory</a></span>, <span><a href="/authors/robert-ford/">Robert Ford</a></span>
 
   </span>
   (2013).
